Implement service method integrations in SellerService, AdminService, and CustomerService